<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".main.MainActivity">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe_zero_star"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:id="@+id/head"
            android:layout_marginTop="30dp"
            />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/head"
        android:src="@drawable/img"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        >

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_mode"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:id="@+id/mode"
            android:layout_marginTop="10dp"
            />



        <Button
            android:id="@+id/multi"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/two_player"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke"
            android:textSize="20sp"
            android:layout_below="@id/mode"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/multi"
            android:text="@string/single_player"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:id="@+id/select"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/easy"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/easy"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/select"
            />

        <Button
            android:id="@+id/hard"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/hard"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/easy"
            />




    </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_background"
        android:layout_height="match_parent"
        >

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe_zero_star"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:id="@+id/head1"
            android:layout_marginTop="30dp"
            />

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/head1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/loading"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#E91E63" />

    </RelativeLayout>




</RelativeLayout>