<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".level.TwoPlayer">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="90dp"
        >

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            ads:adSize="BANNER"
            android:layout_marginBottom="20dp"
            ads:adUnitId="@string/banner_id">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winner"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="#F44336"
            />

        <Button
            android:id="@+id/btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_stroke"
            android:text="@string/reset"
            android:textSize="20sp"
            android:textColor="#9C27B0"
            />



        <TextView
            android:id="@+id/win"
            android:layout_marginTop="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/turn"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/win"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            />


        <GridLayout
            android:id="@+id/grid"
            android:layout_width="300dp"
            android:layout_height="302dp"
            android:layout_below="@id/turn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="26dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/frame"
            android:columnCount="3"
            android:rowCount="3">


            <ImageView
                android:id="@+id/img1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginStart="29dp"
                android:layout_marginTop="30dp"
                android:onClick="gameLogic"
                android:tag="0" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="33dp"
                android:layout_marginTop="30dp"
                android:onClick="gameLogic"
                android:tag="1" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:onClick="gameLogic"
                android:tag="2" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginStart="29dp"
                android:layout_marginTop="28dp"
                android:onClick="gameLogic"
                android:tag="3" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="33dp"
                android:layout_marginTop="28dp"
                android:onClick="gameLogic"
                android:tag="4" />

            <ImageView
                android:id="@+id/img6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginStart="26dp"
                android:layout_marginTop="28dp"
                android:onClick="gameLogic"
                android:tag="5" />

            <ImageView
                android:id="@+id/img7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginStart="29dp"
                android:layout_marginTop="33dp"
                android:onClick="gameLogic"
                android:tag="6" />

            <ImageView
                android:id="@+id/img8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginStart="33dp"
                android:layout_marginTop="33dp"
                android:onClick="gameLogic"
                android:tag="7" />

            <ImageView
                android:id="@+id/img9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginStart="26dp"
                android:layout_marginTop="33dp"
                android:onClick="gameLogic"
                android:tag="8" />

        </GridLayout>



        <ImageView
            android:id="@+id/lineY1"
            android:layout_width="10dp"
            android:layout_height="302dp"
            android:background="@drawable/up"
            android:layout_below="@id/turn"
            android:layout_marginTop="21dp"
            android:layout_marginStart="85dp"
            android:visibility="invisible"
            />

        <ImageView
            android:id="@+id/lineY2"
            android:layout_width="10dp"
            android:layout_height="302dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="177dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/up"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineY3"
            android:layout_width="10dp"
            android:layout_height="302dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="262dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/up"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineRight"
            android:layout_width="300dp"
            android:layout_height="302dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/right"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineLeft"
            android:layout_width="300dp"
            android:layout_height="302dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/left"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineX1"
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/down"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineX2"
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="30dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/down"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/lineX3"
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:layout_below="@id/turn"
            android:layout_marginStart="30dp"
            android:layout_marginTop="260dp"
            android:background="@drawable/down"
            android:visibility="invisible" />


    </RelativeLayout>

        </ScrollView>


</RelativeLayout>